--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">Scan To Text</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="error">Error: %s</string>
+    <string name="txt_exit_app">Exit app?</string>
+    <string name="txt_cancel">Cancel</string>
+    <string name="txt_delete">Delete</string>
+    <string name="txt_exit">Exit</string>
+    <string name="txt_confirm_exit_app">Are you sure want to exit?</string>
+    <string name="txt_delete_description">Are you sure want to delete?\nThis action can not be undone</string>
+    <string name="txt_search">Search</string>
+    <string name="txt_loading">Loading…</string>
+    <string name="txt_rotate">Rotate</string>
+    <string name="no_app_found">No valid app found</string>
 </resources>
